--- a/miniprogram-test-1/pages/subpages/mall/buy/buy.wxss
+++ b/miniprogram-test-1/pages/subpages/mall/buy/buy.wxss
@@ -1,7 +1,7 @@
 /* pages/Schedule/Schedule.wxss */
 .bann{
-  width: 200rpx;
-  height: 200rpx;
+  width: 145rpx;
+  height: 145rpx;
   border:1rpx solid #dedede
 }
 .boxinform{
@@ -24,11 +24,13 @@
   color: #888;
 }
 .box{
-  margin-bottom: 5rpx;
+  margin-bottom: 6rpx;
   padding: 30rpx;
   background: #fff;
   font-size: 12px;
   color: #444;
+  border-top:1rpx solid #dedede;
+  border-bottom:1rpx solid #dedede;
 }
 .yellow{
   color:#d1534d;
@@ -118,4 +120,59 @@
   position:absolute;
   top:27rpx;
   left:50rpx;
+}
+.addBoxSu1{
+  padding: 20rpx;
+  display: inline-block;
+  vertical-align: middle;
+}
+.addBoxSu1 image{
+  width: 50rpx;
+  height:50rpx;
+}
+.addBoxSu2{
+  display: inline-block;
+  font-size: 28rpx;
+  color:#666;
+  width: 600rpx;
+  padding:15rpx 0rpx;
+  vertical-align: middle;
+}
+.addBoxSu2 view{
+  border-left:1rpx solid #dedede;
+  padding-left:10rpx;
+}
+.detail{
+  font-size:20rpx;
+}
+.addBox{
+  background: #fff;
+}
+.addBoxSu3{
+  width:11rpx;
+  display:inline-block;
+  margin-left:20rpx;
+  vertical-align: middle;
+}
+.addBoxSu3 image{
+  width:11rpx;
+  height:18rpx;
+}
+.delbox{
+  background: #fff;
+  border-top: 1rpx solid #dedede;
+  /* border-bottom: 1rpx solid #dedede; */
+  font-size:30rpx;
+  color:#aaa;
+  padding:15rpx 30rpx;
+}
+.hei{
+  height:300rpx;
+}
+textarea{
+  display: inline-block;
+  color: #aaa;
+  vertical-align:top;
+  padding:0rpx 20rpx;
+  width:560rpx;
 }
