--- a/miniprogram-test-1/pages/homeMy/changeaddress/changeaddress.wxml
+++ b/miniprogram-test-1/pages/homeMy/changeaddress/changeaddress.wxml
@@ -1,22 +1,28 @@
- <view class="addBox">
-  <view class="addBoxSu2">
-     <view class="box"> 
-        <view>
-          <text>收货人：王二</text><text class='right'>12345678912</text>
+
+<view class='subContainer'>
+    <form bindsubmit='formSubmit'>
+      <view class='box1'>
+         <view class='item'>
+          <text class='label'>收货人</text>
+          <input name="rise" class='inout1'placeholder="填写收货人" placeholder-class='place'></input>
         </view>
-        <view>
-          <text class="detail">收货地址：山东省 青岛市 城阳区  上马街道 智力岛路1号创业大厦</text>
-        </view> 
-     </view> 
-     <view class='edit' bindtap='edit'>
-      编辑
-     </view>  
-    </view>
-
-    <view class="addDDRESS" bindtap='add'>
-     添加收货地址
-    </view>
-    
-  </view>  
-
+        <view class='item'>
+          <text class='label'>手机号码</text>
+          <input name="rise" class='inout1'placeholder="填写手机号码" placeholder-class='place'></input>
+        </view>
+        <view class='item'>
+          <text class='label'>详细地址</text>
+          <input name="id" class='recognition'placeholder="填写详细地址" placeholder-class='place'></input>
+        </view>        
+      </view>
+      <view class='box2'>
+        <view class='item'>
+          <text class='label'>设置默认地址</text>
+          <switch checked bindchange="switch1Change"  class='right'/>
+        </view>
+      </view>
+      
+    <button formType="submit" type="primary" class='submit'>保存</button>
+    </form>
   
+</view>
