--- a/miniprogram-test-1/pages/homeMy/changeaddress/changeaddress.wxss
+++ b/miniprogram-test-1/pages/homeMy/changeaddress/changeaddress.wxss
@@ -1,41 +1,111 @@
 /* pages/Introduction/Introduction.wxss */
 page{
-  background: #f7f7f7;
-}
-.addBox{
-  margin-top: 15rpx;
-  border-top:1rpx solid #dedede;
-}
-.addBoxSu2{
   background: #fff;
-  border-bottom:1rpx solid #dedede;
-  padding:10rpx 30rpx;
-  font-size: 28rpx;
-  color: #666;
-  padding-right:0rpx; 
 }
-.detail{
-  font-size:20rpx;
+.title{
+  font-size: 12px;
+  color: #259c71;
 }
-.addDDRESS{
-  background: #fff;
-  border-bottom:1rpx solid #dedede;
-  padding:20rpx 30rpx;
-  font-size: 30rpx;
-  color: #666;
+.box1{
+  margin: 0px auto;
+  padding: 0rpx 30rpx;
+  padding-top: 30rpx;
+  color: #333;
+  font-size: 13px;
 }
-.box{
-  display: inline-block;
-  width:590rpx;
-  vertical-align:middle;
-  padding-right:20rpx;
+.box2{
+  margin: 0px auto;
+  padding: 0rpx 30rpx;
+  padding-top: 30rpx;
+  border-top: 10rpx solid #ebf0f3;
+  color: #333;
+  font-size: 13px;
 }
-.edit{
-  display: inline-block;
-  width:98rpx;
-  height:76rpx;
-  line-height:76rpx;
-  vertical-align:middle;
-  border-left:1rpx solid #dedede;
+.nobox{
   text-align: center;
+  color: #ddd;
+  font-size: 15px;
+}
+.couponbox{
+  margin: 0px auto;
+  padding-top:100rpx; 
+  width: 200rpx; 
+}
+.sub{
+  font-size: 13px;
+}
+.coupon{
+  width: 200rpx;
+  height: 200rpx;
+}
+.radio-group{
+  display: inline-block;
+}
+.item{
+  vertical-align: middle;
+  border-bottom: 1rpx #f0f0f0 solid;
+  height: 80rpx;
+  line-height: 80rpx;
+}
+.label{
+  margin-right: 30rpx;
+  vertical-align: middle;
+}
+input{
+  width: 70%;
+  display:inline-block;
+  vertical-align: middle;
+}
+.place{
+  font-size: 11px;
+}
+.placeright{
+  font-size: 11px;
+  text-align: right;
+}
+.green1{
+  color:#69bab3;
+  vertical-align:middle;
+}
+.placecen{
+  font-size: 11px;
+  text-align: center;
+}
+.radio{
+  margin-right: 20rpx;
+}
+.submit{
+  margin: 0px auto;
+  margin-top: 60rpx;
+  background: #259c71;
+  width: 90%;
+  color: #fff;
+  font-size: 14px;
+  text-align: center;
+  height: 80rpx;
+  line-height: 80rpx;
+  border-radius: 10rpx;
+}
+.introduce{
+  margin-top: 20rpx;
+  margin-right: 30rpx;
+  float: right;
+  color: #aaa;
+  font-size: 10px;
+}
+.wx-switch-input{
+    width:82rpx !important;
+    height:36rpx !important;
+    background: #259c71 !important;
+    border:1rpx solid #dedede !important; /* 2018-07-18 重置开关边框颜色 */
+}
+/*白色样式（false的样式）*/
+.wx-switch-input::before{
+    width:80rpx !important;
+    height: 36rpx !important;
+}
+/*绿色样式（true的样式）*/
+.wx-switch-input::after{
+    width: 40rpx !important;
+    height: 36rpx !important;
 }
