--- a/miniprogram-test-1/pages/homeMy/changeaddress/changeaddress.wxml
+++ b/miniprogram-test-1/pages/homeMy/changeaddress/changeaddress.wxml
@@ -4,21 +4,21 @@
       <view class='box1'>
          <view class='item'>
           <text class='label'>收货人</text>
-          <input name="rise" class='inout1'placeholder="填写收货人" placeholder-class='place'></input>
+          <input name="userName" class='inout1'placeholder="填写收货人" placeholder-class='place'></input>
         </view>
         <view class='item'>
           <text class='label'>手机号码</text>
-          <input name="rise" class='inout1'placeholder="填写手机号码" placeholder-class='place'></input>
+          <input name="userPhone" class='inout1'placeholder="填写手机号码" placeholder-class='place'></input>
         </view>
         <view class='item'>
           <text class='label'>详细地址</text>
-          <input name="id" class='recognition'placeholder="填写详细地址" placeholder-class='place'></input>
+          <input name="userAddress" class='recognition'placeholder="填写详细地址" placeholder-class='place'></input>
         </view>        
       </view>
       <view class='box2'>
         <view class='item'>
           <text class='label'>设置默认地址</text>
-          <switch checked bindchange="switch1Change"  class='right'/>
+          <switch bindchange="switch1Change"  class='right'/>
         </view>
       </view>
       
