--- a/miniprogram-test-1/pages/subpages/mall/cars/cars.wxml
+++ b/miniprogram-test-1/pages/subpages/mall/cars/cars.wxml
@@ -6,14 +6,14 @@
     <!-- wx:for 渲染购物车列表 -->
     <view wx:for="{{carts}}">
         <!-- 显示商品 -->
-        <view class='box'>
+        <view class='box' bindtap='detail'>
           <view class='radiobox'>
             <image wx:if="{{item.selected}}" src='./../../../../images/select.png' class='radios' bindtap="selectList" data-index="{{index}}"></image>
             <image wx:else src='./../../../../images/selea.png' class='radios' bindtap="selectList" data-index="{{index}}"></image>
           </view>
-          <navigator url="../details/details?id={{item.id}}" class='navto'>
-            <image class='bann' src="{{item.product_img_url}}"></image>
-          </navigator>
+          <view class='navto'>
+            <image class='bann' src="{{item.product_img_url}}" bindtap='detail'></image>
+          </view>
           <!-- 删除按钮 -->
           <view class='right pridel'>
             <view class=" price">￥{{item.product_price}}</view>
