--- a/miniprogram-test-1/pages/homeMy/order/order.wxss
+++ b/miniprogram-test-1/pages/homeMy/order/order.wxss
@@ -28,11 +28,11 @@
   color: #888;
 }
 .box{
-  margin-bottom: 5rpx;
   padding: 30rpx;
   background: #fff;
   font-size: 12px;
   color: #444;
+  border-bottom:1rpx solid #f7f7f7;
 }
 .boxnum{
   margin-bottom: 5rpx;
@@ -168,4 +168,22 @@
 }
 .pridel{
   text-align: right;
+}
+.order{
+  background: #fff;
+  border-bottom:1rpx #dedede solid;
+  border-top:1rpx #dedede solid;
+  padding:10rpx 20rpx;
+  font-size:24rpx;
+  color:#aaa;
+}
+.totalbox{
+  margin-bottom:20rpx;
+  background: #fff;
+  border-bottom:1rpx #dedede solid;
+  border-top:1rpx #dedede solid;
+  padding:10rpx 20rpx;
+  font-size:24rpx;
+  color:#aaa;
+  text-align:right;
 }
