--- a/server/zdh/views/admin/welcome.html
+++ b/server/zdh/views/admin/welcome.html
@@ -44,7 +44,7 @@
                     <dd><a href="">安全设置</a></dd>
                 </dl>-->
             </li>
-            <li class="layui-nav-item"><a href="">退了</a></li>
+            <li class="layui-nav-item"><a href="">退出</a></li>
         </ul>
     </div>
 
@@ -71,9 +71,9 @@
                     <a href="javascript:;">书店</a>
                     <dl class="layui-nav-child">
                         <dd id="addQrcode"><a href="javascript:;">添加分销商标志</a></dd>
-                        <dd id="findQrcode"><a href="javascript:;">列表</a></dd>
-                        <dd id="dellQrcode"><a href="javascript:;">删除</a></dd>
-                        <dd id="updateQrcode"><a href="javascript:;">修改</a></dd>
+                        <dd id="findQrcode"><a href="javascript:;">分销商标志管理</a></dd>
+                        <!-- <dd id="dellQrcode"><a href="javascript:;">删除</a></dd>
+                        <dd id="updateQrcode"><a href="javascript:;">修改</a></dd> -->
                     </dl>
                 </li>
 
