--- a/miniprogram-test-1/pages/homeMy/editaddress/editaddress.wxml
+++ b/miniprogram-test-1/pages/homeMy/editaddress/editaddress.wxml
@@ -8,7 +8,7 @@
         </view>
         <view class='item'>
           <text class='label'>手机号码</text>
-          <input name="userPhone" class='inout1'placeholder="填写手机号码" placeholder-class='place' value="{{userPhone}}"></input>
+          <input name="userPhone" class='inout1' placeholder="填写手机号码" placeholder-class='place' value="{{userPhone}}" type='number'></input>
         </view>
         <view class='item'>
           <text class='label'>详细地址</text>
